--- a/server-backend-helm-chart/HELM/templates/secret-atlas.yaml
+++ b/server-backend-helm-chart/HELM/templates/secret-atlas.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: {{ .Values.namespace }}
 
 data:
-  MONGO_INITDB_ROOT_USERNAME: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_USERNAME | b64enc }}
-  MONGO_INITDB_ROOT_PASSWORD: {{ .Values.mongodbEnv.MONGO_INITDB_ROOT_PASSWORD | b64enc }}
+  MONGO_INITDB_ROOT_USERNAME: {{ .Values.MONGO_INITDB_ROOT_USERNAME | b64enc }}
+  MONGO_INITDB_ROOT_PASSWORD: {{ .Values.MONGO_INITDB_ROOT_PASSWORD | b64enc }}
