--- a/server-backend-helm-chart/HELM/values-prod.yaml
+++ b/server-backend-helm-chart/HELM/values-prod.yaml
@@ -1,5 +1,6 @@
 namespace: production
 
+
 backendImage:
   repository: sunnyeyles/ds_server
   tag: "1.0"
@@ -16,3 +17,6 @@ backendHpa:
   minReplicas: 2
   maxReplicas: 6 
   targetCPUUtilizationPercentage: 70
+
+MONGO_INITDB_ROOT_USERNAME: atlas_username  # To be set in your environment via EXPORT atlas_username=
+MONGO_INITDB_ROOT_PASSWORD: atlas_password  # Similarly
