--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -1,35 +1,54 @@
-name: deploy
+name: Deploy Infrastructure
 
 on:
-  push:
-    branches:
-      - main
   pull_request:
     branches:
       - development
-      - main
+  push:
+    branches:
+      - development
 
 jobs:
-  terraform:
+  tf_fmt:
+    name: deploy
     runs-on: ubuntu-latest
+    env:
+      github-token: ${{ secrets.GH_TOKEN }}
+      ssh-key: ${{secrets.AWS_EC2_SSH_KEY}}
+      user-access-key: ${{secrets.CICD_USER_ACCESS_KEY}}
+      user-secret-key: ${{secrets.CICD_USER_SECRET_KEY}}
 
     steps:
       - name: checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: setup terraform
-        uses: hashicorp/setup-terraform@v1
+        uses: hashicorp/setup-terraform@v3
 
-      - name: terraform init
-        run: terraform init
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
+        continue-on-error: true
 
-      - name: terraform apply
-        # set environment variables from github secrets
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.CICD_USER_ACCESS_KEY }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.CICD_USER_SECRET_KEY }}
-          AWS_EC2_SSH_KEY: ${{ secrets.AWS_EC2_SSH_KEY }}
-        run: |
-          echo "${{ secrets.AWS_EC2_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          terraform apply -auto-approve
+      - name: Terraform Init
+        id: init
+        run: terraform init \
+          -backend-config="access_key=${{ secrets.CICD_USER_ACCESS_KEY }}" \
+          -backend-config="secret_key=${{ secrets.CICD_USER_SECRET_KEY }}"
+
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color
+        continue-on-error: true
+
+      - uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GH_TOKEN }}
+          script: |
+            echo "${{ secrets.AWS_EC2_SSH_KEY }}" > ~/.ssh/id_rsa
+            chmod 600 ~/.ssh/id_rsa
+            terraform apply -auto-approve
