--- a/.github/workflows/terraform-deploy.yml
+++ b/.github/workflows/terraform-deploy.yml
@@ -33,14 +33,22 @@ jobs:
           terraform_version: 1.4.6
 
       - name: Terraform Init
-        run: terraform init
+        run: |
+          cd terraform
+          terraform init
 
       - name: Terraform Format
-        run: terraform fmt -check
+        run: |
+          cd terraform
+          terraform fmt -check
 
       - name: Terraform Plan
-        run: terraform plan -input=false
+        run: |
+          cd terraform
+          terraform plan -input=false
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false
+        run: |
+          cd terraform
+          terraform apply -auto-approve -input=false
