--- a/.github/workflows/backend-push.yml
+++ b/.github/workflows/backend-push.yml
@@ -1,71 +1,71 @@
+# # name: Initial branch push
+
+# # on:
+# #   push:
+# #     branches:
+# #       - "feature/*"
+# #       - "bug/*"
+
+# # jobs:
+# #   build_and_test:
+# #     runs-on: ubuntu-latest
+# #     steps:
+# #       - uses: actions/checkout@v4
+# #       - name: Use Node.js
+# #         uses: actions/setup-node@v4
+# #         with:
+# #           node-version: "20.x"
+# #       - run: npm install
+# #       - run: npm run build
+# #       - run: npm run start
 # name: Initial branch push
 
 # on:
-#   push:
+#   pull_request:
 #     branches:
-#       - "feature/*"
-#       - "bug/*"
+#       # - "feature/*"
+#       # - "bug/*"
+#       - development
 
 # jobs:
 #   build_and_test:
 #     runs-on: ubuntu-latest
 #     steps:
 #       - uses: actions/checkout@v4
+
 #       - name: Use Node.js
 #         uses: actions/setup-node@v4
 #         with:
 #           node-version: "20.x"
-#       - run: npm install
-#       - run: npm run build
-#       - run: npm run start
-name: Initial branch push
 
-on:
-  pull_request:
-    branches:
-      # - "feature/*"
-      # - "bug/*"
-      - development
+#       # frontend
+#       - name: check path
+#         run: |
+#           cd ../../ds_client
+#           ls
+#       - name: install dependencies in frontend
+#         run: |
+#           cd ../../ds_client
+#           npm install
+#       - name: build frontend
+#         run: |
+#           cd ../../ds_client
+#           npm run build
+#       - name: check for frontend build errors
+#         run: |
+#           cd ../../ds_client
+#           npm run build -- --stats-error-details
 
-jobs:
-  build_and_test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-
-      # frontend
-      - name: check path
-        run: |
-          cd ../../ds_client
-          ls
-      - name: install dependencies in frontend
-        run: |
-          cd ../../ds_client
-          npm install
-      - name: build frontend
-        run: |
-          cd ../../ds_client
-          npm run build
-      - name: check for frontend build errors
-        run: |
-          cd ../../ds_client
-          npm run build -- --stats-error-details
-
-      # # Backend
-      # - name: install backend dependencies
-      #   run: |
-      #     cd ../../ds_server
-      #     npm install
-      # - name: build backend
-      #   run: |
-      #     cd ../../ds_server
-      #     npm run build
-      # - name: check for backend build errors
-      #   run: |
-      #     cd ../../ds_server
-      #     npm run build -- --stats-error-details
+#       # # Backend
+#       # - name: install backend dependencies
+#       #   run: |
+#       #     cd ../../ds_server
+#       #     npm install
+#       # - name: build backend
+#       #   run: |
+#       #     cd ../../ds_server
+#       #     npm run build
+#       # - name: check for backend build errors
+#       #   run: |
+#       #     cd ../../ds_server
+#       #     npm run build -- --stats-error-details
