--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -1,39 +1,39 @@
-name: Frontend
+# name: Frontend
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - development
+# on:
+#   workflow_dispatch:
+#   push:
+#     branches:
+#       - development
 
-jobs:
-  build_and_push:
-    runs-on: ubuntu-latest
+# jobs:
+#   build_and_push:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: checkit out
-        uses: actions/checkout@v3
+#     steps:
+#       - name: checkit out
+#         uses: actions/checkout@v3
 
-      - name: docker build setup
-        uses: docker/setup-buildx-action@v2
+#       - name: docker build setup
+#         uses: docker/setup-buildx-action@v2
 
-      - name: login to dockerhub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+#       - name: login to dockerhub
+#         uses: docker/login-action@v2
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: pwd
-        run: pwd
+#       - name: pwd
+#         run: pwd
 
-      - name: list files in current directory
-        run: ls -al
+#       - name: list files in current directory
+#         run: ls -al
 
-      - name: list files in ds_client directory
-        run: ls -al ./ds_client
+#       - name: list files in ds_client directory
+#         run: ls -al ./ds_client
 
-      - name: build image
-        run: docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/ds_client:1.0 -f ./ds_client/Dockerfile ./ds_client
+#       - name: build image
+#         run: docker build --no-cache -t ${{ secrets.DOCKER_USERNAME }}/ds_client:1.0 -f ./ds_client/Dockerfile ./ds_client
 
-      - name: push image to dockerhub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/ds_client:1.0
+#       - name: push image to dockerhub
+#         run: docker push ${{ secrets.DOCKER_USERNAME }}/ds_client:1.0
