--- a/.github/workflows/push-images.yml
+++ b/.github/workflows/push-images.yml
@@ -1,5 +1,6 @@
-name: Push Containers
+name: Push Images
 
+# pushes frontend and backend images to dockerhub when the development branch is pushed to
 on:
   workflow_dispatch:
   push:
@@ -21,6 +22,8 @@ jobs:
       - name: dockerhub login
         uses: docker/login-action@v2
         with:
+          # inject sunnys dockerhub credentials from github secrets
+
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -43,6 +46,7 @@ jobs:
 
       - name: dockerhub login
         uses: docker/login-action@v2
+        # inject sunnys dockerhub credentials from github secrets
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
