--- a/ds_server/package.json
+++ b/ds_server/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\""
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
+    "lint": "./node_modules/.bin/eslint ."
   },
   "author": "sunny",
   "license": "ISC",
@@ -15,7 +16,9 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
-    "typescript": "^5.4.5"
+    "globals": "^15.7.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.15.0"
   },
   "dependencies": {
     "concurrently": "^8.2.2",
