Added install command before running lint

--- a/.github/workflows/test-build-backend.yml
+++ b/.github/workflows/test-build-backend.yml
@@ -19,6 +19,9 @@ jobs:
           node-version: "20.x"
       - run: |
           cd ds_client
+          npm install
+      - run: |
+          cd ds_client
           npm run lint
       - run: |
           cd ds_client
