--- a/.github/workflows/test-build-frontend.yml
+++ b/.github/workflows/test-build-frontend.yml
@@ -19,6 +19,9 @@ jobs:
           node-version: "20.x"
       - run: |
           cd ds_client
+          npm run install
+      - run: |
+          cd ds_client
           npm run build --if-present
       - run: |
           cd ds_client
