--- a/.github/workflows/test-build-frontend.yml
+++ b/.github/workflows/test-build-frontend.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: "20.x"
       - run: |
           cd ds_client
-          npm run install
+          npm install
       - run: |
           cd ds_client
           npm run build --if-present
