--- a/.github/workflows/test-build-backend.yml
+++ b/.github/workflows/test-build-backend.yml
@@ -18,11 +18,11 @@ jobs:
         with:
           node-version: "20.x"
       - run: |
-          cd ds_client
+          cd ds_server
           npm install
       - run: |
-          cd ds_client
-          npm run lint
-      - run: |
-          cd ds_client
+          cd ds_server
           npm run build --if-present
+      - run: |
+          cd ds_server
+          npm run lint
