--- a/.github/workflows/test-build-frontend.yml
+++ b/.github/workflows/test-build-frontend.yml
@@ -21,7 +21,7 @@ jobs:
           npm install
       - run: |
           cd ds_client
-          npm run build --if-present
+          npm run test
       - run: |
           cd ds_client
           npm run lint
