--- a/ds_client/package.json
+++ b/ds_client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build & vite",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "vite build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
