--- a/.github/workflows/test-build-backend.yml
+++ b/.github/workflows/test-build-backend.yml
@@ -1,7 +1,6 @@
 name: Test Build and Lint Backend
 
-# this will first run the linter, the linter will find any messy code, unused imports or typescript errors
-# after that is run it will build the application and make sure there are no errors in the build process
+# this workflow will run the linter, then build the application and ensure there are no build errors
 on:
   pull_request:
     branches: ["development"]
@@ -10,20 +9,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
+      MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
+
     steps:
       - uses: actions/checkout@v4
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20.x"
 
-      - name: Inject environment variables
-        run: echo "Injecting env variables"
-        env:
-          MONGO_INITDB_ROOT_USERNAME: ${{ secrets.MONGO_INITDB_ROOT_USERNAME }}
-          MONGO_INITDB_ROOT_PASSWORD: ${{ secrets.MONGO_INITDB_ROOT_PASSWORD }}
-
-      - run: |
+      - name: Install dependencies and run lint and build
+        run: |
           cd ds_server
           npm install
           npm run build --if-present
